--- a/backend/package.json
+++ b/backend/package.json
@@ -13,13 +13,26 @@
 	"devDependencies": {
 		"@types/bun": "latest",
 		"@types/express": "^5.0.1",
-		"@types/node": "^22.14.0"
+		"@types/mailgen": "^2.0.7",
+		"@types/mongoose": "^5.11.97",
+		"@types/morgan": "^1.9.9",
+		"@types/node": "^22.14.0",
+		"@types/nodemailer": "^6.4.17"
 	},
 	"peerDependencies": {
 		"typescript": "^5.8.2"
 	},
 	"dependencies": {
+		"@types/cookie-parser": "^1.4.8",
+		"@types/cors": "^2.8.17",
 		"bun": "latest",
-		"express": "^5.1.0"
+		"cookie-parser": "^1.4.7",
+		"cors": "^2.8.5",
+		"dotenv": "^16.4.7",
+		"express": "^5.1.0",
+		"mailgen": "^2.0.29",
+		"mongoose": "^8.13.2",
+		"morgan": "^1.10.0",
+		"nodemailer": "^6.10.0"
 	}
 }
