--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
 		"bun": "latest",
 		"cookie-parser": "^1.4.7",
 		"cors": "^2.8.5",
+		"dayjs": "^1.11.13",
 		"dotenv": "^16.4.7",
 		"express": "^5.1.0",
 		"mailgen": "^2.0.29",
